--- a/css/style.css
+++ b/css/style.css
@@ -433,3 +433,12 @@ body {
     max-width: 100%;
     border-radius: 8px;
   }
+  .event-image {
+    display: block;
+    margin: 10px auto 20px;
+    max-width: 600px;
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  }
+  
